# picnic

./: .gitignore  CMakeLists.txt  build.sh  install.sh
etc/udev/rules.d/: 99-gpio.rules
linuxcnc_config/: halshow.preferences  picnic-3-axis.hal  picnic-3-axis.ini  tool.tbl
module/: Makefile  modules.order  picnc.ko  picnic_buffer.c  picnic_buffer.h  picnic_caps.c  picnic_caps.h  picnic_const.h  picnic_dev.c  picnic_dev.h  picnic_main.c  picnic_main.h  picnic_module.c
module/dtb/: Makefile  orange-pi-3b-picnic.dtbo  orange-pi-3b-picnic.dts  orange-pi-3b-picnic.dts.dep.tmp
module/test/: test  test.c
module/udev/: 99-picnic.rules
src/: module.c  module.h  module_funcs.c  module_funcs.h  module_state.h  picnic_device.c  picnic_device.h
test/: Makefile
